@@ -3,8 +3,8 @@
   Program:   gdcm
   Module:    $RCSfile: gdcmFile.cxx,v $
   Language:  C++
-  Date:      $Date: 2004/07/16 15:18:05 $
-  Version:   $Revision: 1.116 $
+  Date:      $Date: 2004/07/30 11:40:13 $
+  Version:   $Revision: 1.117 $
                                                                                 
   Copyright (c) CREATIS (Centre de Recherche et d'Applications en Traitement de
   l'Image). All rights reserved. See Doc/License.txt or
@@ -63,24 +63,15 @@ gdcmFile::gdcmFile(gdcmHeader *header)
  *        seen as a side effect).   
  * @param filename file to be opened for parsing
  * @param   exception_on_error whether we throw an exception or not
- * @param   enable_sequences = true to allow the header 
- *          to be parsed *inside* the SeQuences, 
- *          when they have an actual length 
- * \warning enable_sequences *has to be* true for reading PAPYRUS 3.0 files
  * @param   ignore_shadow to allow skipping the shadow elements, 
  *          to save memory space.
- * \warning The TRUE value for this param has to be used 
- *          with a FALSE value for the 'enable_sequence' param.
- *          ('public elements' may be embedded in 'shadow Sequences')
  */
 gdcmFile::gdcmFile(std::string const & filename, 
                    bool exception_on_error,
-                   bool enable_sequences, 
                    bool ignore_shadow)
 {
    Header = new gdcmHeader( filename,
                             exception_on_error,
-                            enable_sequences,
                             ignore_shadow );
    SelfHeader = true;
    PixelRead  = -1; // no ImageData read yet.
