@@ -3,8 +3,8 @@
   Program:   gdcm
   Module:    $RCSfile: gdcmFile.h,v $
   Language:  C++
-  Date:      $Date: 2004/07/16 15:18:05 $
-  Version:   $Revision: 1.38 $
+  Date:      $Date: 2004/07/30 11:40:13 $
+  Version:   $Revision: 1.39 $
                                                                                 
   Copyright (c) CREATIS (Centre de Recherche et d'Applications en Traitement de
   l'Image). All rights reserved. See Doc/License.txt or
@@ -34,7 +34,6 @@ public:
    gdcmFile(gdcmHeader *header);
    gdcmFile(std::string const & filename, 
             bool  exception_on_error = false, 
-            bool  enable_sequences   = false,
             bool  skip_shadow        = false);
  
    virtual ~gdcmFile();
