@@ -3,8 +3,8 @@
   Program:   gdcm
   Module:    $RCSfile: gdcmHeader.h,v $
   Language:  C++
-  Date:      $Date: 2004/07/17 22:45:40 $
-  Version:   $Revision: 1.81 $
+  Date:      $Date: 2004/07/30 11:40:13 $
+  Version:   $Revision: 1.82 $
                                                                                 
   Copyright (c) CREATIS (Centre de Recherche et d'Applications en Traitement de
   l'Image). All rights reserved. See Doc/License.txt or
@@ -110,7 +110,6 @@ public:
    gdcmHeader(bool exception_on_error = false);
    gdcmHeader(std::string const & filename, 
               bool  exception_on_error = false, 
-              bool  enable_sequences   = false,
               bool  skip_shadow        = false);
  
    virtual ~gdcmHeader();
